# raspi-robot-control

ros-docker/: Dockerfile  README.md  build.sh  entrypoint.sh  run-nvidia.sh  run.sh
ros-robot-control/: .gitignore
ros-robot-control/src/raspi_packages/car_model/: CMakeLists.txt  package.xml
ros-robot-control/src/raspi_packages/car_model/launch/: display.launch
ros-robot-control/src/raspi_packages/motor_control/launch/: subscriber.launch
ros-robot-control/src/raspi_packages/motor_control/src/: subscriber_amspi.py  subscriber_l298n.py
ros-robot-control/src/raspi_packages/motor_control/src/L298N/: L298N.py
ros-robot-control/src/remote_control_packages/xbox_control/src/: publisher.py  xbox.py
